# simple_cluster_go

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  environment-metalsurfer.yml  environment.yml  package-lock.json  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
benchmark/: README.md  __init__.py  benchmark_Pt.py  benchmark_Pt_PBE.py  benchmark_Pt_surface_graphite.py  benchmark_Pt_surface_nio.py  benchmark_common.py  memory_scaler_overhead.py  neb_sweep_mace.py
benchmark/benchmark_files_Pt/: Pt10.xyz  Pt11.xyz  Pt4.xyz  Pt5.xyz  Pt6.xyz  Pt7.xyz  Pt8.xyz  Pt9.xyz
docs/: Makefile  README.md  conf.py  requirements.txt  test_runtime_notes.md
docs/source/: Makefile  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
examples/: cluster_oh_relax_demo.py  example_pt5_2oh_graphite.py  example_pt5_gas.py  example_pt5_graphite.py  example_pt5_oh_gas.py  surface_ga_pt_dimer_demo.py  surface_ga_relax_top_layers_demo.py
runners/: __init__.py  _common.py  run_pt5_2oh_graphite.py  run_pt5_gas.py  run_pt5_graphite.py  run_pt5_oh_gas.py  run_scgo_with_ts_search.py  run_scgo_with_ts_search_graphene.py  run_scgo_with_ts_search_graphene_mace.py  run_scgo_with_ts_search_graphene_uma.py  run_scgo_with_ts_search_graphene_with_oh.py  run_scgo_with_ts_search_graphene_with_oh_mace.py  run_scgo_with_ts_search_graphene_with_oh_uma.py  run_scgo_with_ts_search_mace.py  run_scgo_with_ts_search_uma.py
scgo/: __init__.py  constants.py  param_presets.py  param_presets_torchsim.py  run_minima.py  run_ts.py  runner_api.py  runner_graphene.py  runner_surface.py  system_types.py
scgo/algorithms/: __init__.py  _lazy_torchsim_ga.py  basinhopping_go.py  ga_common.py  geneticalgorithm_go.py  geneticalgorithm_go_torchsim.py  simple_go.py
scgo/ase_ga_patches/: __init__.py  _vector_utils.py  cutandsplicepairing.py  population.py  standardmutations.py
scgo/calculators/: __init__.py  mace_helpers.py  orca_helpers.py  torchsim_helpers.py  uma_helpers.py  vasp_helpers.py
scgo/cluster_adsorbate/: __init__.py  combine.py  config.py  constraints.py  geometry.py  hierarchical.py  placement.py  relax.py  validation.py
scgo/database/: __init__.py  cache.py  connection.py  constants.py  discovery.py  exceptions.py  health.py  helpers.py  manager.py  metadata.py  registry.py  retry.py  schema.py  streaming.py  sync.py  transactions.py
scgo/initialization/: __init__.py  candidate_discovery.py  geometry_helpers.py  initialization_config.py  initializers.py  random_spherical.py  seed_combiners.py  strategy_allocation.py  templates.py
scgo/minima_search/: __init__.py  core.py
scgo/optimization/: __init__.py  algorithm_select.py
scgo/surface/: __init__.py  composition.py  config.py  constraints.py  deposition.py  deposition.py.backup  fragment_templates.py  objectives.py  presets.py  validation.py
scgo/ts_search/: __init__.py  parallel_neb.py  transition_state.py  transition_state_io.py  transition_state_run.py  ts_network.py  ts_statistics.py
scgo/utils/: __init__.py  comparators.py  (+18 more)
tests/: conftest.py  constants.py  cuda_skip.py  test_optimization_algorithm_select.py  test_optional_extras_smoke.py  test_runner_graphene.py  test_runner_surface.py  test_utils.py  validation_helpers.py
(+102 files in other folders)
